# sdkprojects

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  DEPLOY_SIMPLE.md  Dockerfile  INTRANET_DEPLOYMENT.md  SDK_API_INTEGRATION.md  SDK_CROSS_ORIGIN.md  create-assistant-sdk.ps1  decode_sdk.py  docker-compose.internal.yml  docker-compose.offline.yml  docker-compose.yml  float_token.txt  init-db.sql  interactive_token.txt  next.config.js  next.config.ts  nginx.conf  package.json  preview_output.html  save_preview.py  sdk_token.txt  start_backend.ps1  start_frontend.ps1  start_frontend_only.bat  start_services.bat  tsconfig.tsbuildinfo  数智审计接口文档.md
assets/: 跨平台嵌入式SDK技术方案文档.docx
backend/: .env.example  Dockerfile  find_lingtong_sdk.py  gunicorn.conf.py  pyproject.toml  requirements.txt  start.bat  start_server.ps1
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  ai.py  ai_agents.py  auth.py  lingtong_auth.py  model.py  sdk.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  patches.py
backend/app/models/: __init__.py  models.py  sdk.py
backend/app/services/: __init__.py  ai_agent_service.py  ai_sdk_bundler.py  conversation_service.py  lingtong_auth.py  lingtong_client.py  lingtong_token_cache.py  model_service.py  sdk_generator.py  sdk_optimizer.py  sdk_service.py  user_service.py  webpack_bundler.py
lingtong-assistant/: index.html
src/app/: layout.tsx  page.tsx
src/lib/: api-client.ts  api-config.ts  api.ts  config.ts  image-utils.ts  react-to-sdk.ts  sdk-api-client.ts  sdk-runtime.ts  sdk-url.ts  (+1 more)
(+133 files in other folders)
